@@ -203,6 +203,18 @@
   "block.createbigcannons.wrought_iron_cannon_chamber": "\u0279\u01DDq\u026F\u0250\u0265\u0186 uouu\u0250\u0186 uo\u0279I \u0287\u0265bno\u0279M",
   "block.createbigcannons.wrought_iron_cannon_end": "pu\u018E uouu\u0250\u0186 uo\u0279I \u0287\u0265bno\u0279M",
   "block.createbigcannons.yaw_controller": "\u0279\u01DD\u05DF\u05DFo\u0279\u0287uo\u0186 \u028D\u0250\u028E",
+  "cast_shape.createbigcannons.autocannon_barrel": "\u05DF\u01DD\u0279\u0279\u0250\u15FA uouu\u0250\u0254o\u0287n\u2C6F",
+  "cast_shape.createbigcannons.autocannon_barrel_flanged": "p\u01DDbu\u0250\u05DF\u2132 \u05DF\u01DD\u0279\u0279\u0250\u15FA uouu\u0250\u0254o\u0287n\u2C6F",
+  "cast_shape.createbigcannons.autocannon_breech": "\u0265\u0254\u01DD\u01DD\u0279\u15FA uouu\u0250\u0254o\u0287n\u2C6F",
+  "cast_shape.createbigcannons.autocannon_recoil_spring": "bu\u0131\u0279dS \u05DF\u0131o\u0254\u01DD\u1D1A uouu\u0250\u0254o\u0287n\u2C6F",
+  "cast_shape.createbigcannons.cannon_end": "pu\u018E uouu\u0250\u0186",
+  "cast_shape.createbigcannons.large": "\u01DDb\u0279\u0250\uA780",
+  "cast_shape.createbigcannons.medium": "\u026Fn\u0131p\u01DDW",
+  "cast_shape.createbigcannons.screw_breech": "\u0265\u0254\u01DD\u01DD\u0279\u15FA \u028D\u01DD\u0279\u0254S",
+  "cast_shape.createbigcannons.sliding_breech": "\u0265\u0254\u01DD\u01DD\u0279\u15FA bu\u0131p\u0131\u05DFS",
+  "cast_shape.createbigcannons.small": "\u05DF\u05DF\u0250\u026FS",
+  "cast_shape.createbigcannons.very_large": "\u01DDb\u0279\u0250\uA780 \u028E\u0279\u01DD\u039B",
+  "cast_shape.createbigcannons.very_small": "\u05DF\u05DF\u0250\u026FS \u028E\u0279\u01DD\u039B",
   "createbigcannons.gui.autocannon_ammo_container.tracer_spacing": ")s(puno\u0279 %s \u028E\u0279\u01DD\u028C\u018E :bu\u0131\u0254\u0250dS \u0279\u01DD\u0254\u0250\u0279\u27D8",
   "createbigcannons.gui.set_proximity_fuze.distance": "s\u029E\u0254o\u05DFq %s :\u01DD\u0254u\u0250\u0287s\u0131\u15E1 uo\u0131\u0287\u0250uo\u0287\u01DD\u15E1",
   "createbigcannons.gui.set_timed_fuze.time": "s\u029E\u0254\u0131\u0287 %s %ss :\u01DD\u026F\u0131\u27D8 \u01DDzn\u2132",
@@ -385,6 +397,7 @@
   "exception.createbigcannons.cannon_mount.hasIncompleteCannonBlocks": "ss\u01DD\u0254o\u0279d bu\u0131\u0287\u025F\u0250\u0279\u0254 \u01DD\u0265\u0287 p\u01DD\u0265s\u0131u\u0131\u025F \u0287ou s\u0250\u0265 ]%s '%s '%s[ \u0287\u0250 \u029E\u0254o\u05DFq uouu\u0250\u0186",
   "exception.createbigcannons.cannon_mount.invalidCannon": "pu\u01DD p\u01DDso\u05DF\u0254 \u01DDuo \u028E\u05DFuo pu\u0250 \u01DDuo pu\u0250 bu\u0131u\u01DDdo \u01DDuo \u028E\u05DFuo pu\u0250 \u01DDuo \u01DD\u028C\u0250\u0265 \u0287sn\u026F uouu\u0250\u0254 \u2C6F",
   "exception.createbigcannons.cannon_mount.noAutocannonBreech": "\u01DD\u0279\u0131\u025F o\u0287 \u0265\u0254\u01DD\u01DD\u0279q uouu\u0250\u0254o\u0287n\u0250 u\u0250 s\u01DD\u0279\u0131nb\u01DD\u0279 uouu\u0250\u0254 s\u0131\u0265\u27D8",
+  "exception.createbigcannons.casting": "%s \u01DDd\u0250\u0265s pu\u0250 %s p\u0131n\u05DF\u025F \u0279o\u025F \u01DDd\u0131\u0254\u01DD\u0279 p\u0131\u05DF\u0250\u028C \u0250 \u01DD\u028C\u0250\u0265 \u0287ou s\u01DDop ]%s '%s '%s[ \u0287\u0250 \u0287s\u0250\u0254 uouu\u0250\u0186",
   "fluid.createbigcannons.molten_bronze": "\u01DDzuo\u0279\u15FA u\u01DD\u0287\u05DFoW",
   "fluid.createbigcannons.molten_cast_iron": "uo\u0279I \u0287s\u0250\u0186 u\u01DD\u0287\u05DFoW",
   "fluid.createbigcannons.molten_nethersteel": "\u05DF\u01DD\u01DD\u0287s\u0279\u01DD\u0265\u0287\u01DDN u\u01DD\u0287\u05DFoW",
