@@ -203,6 +203,18 @@
   "block.createbigcannons.wrought_iron_cannon_chamber": "Wrought Iron Cannon Chamber",
   "block.createbigcannons.wrought_iron_cannon_end": "Wrought Iron Cannon End",
   "block.createbigcannons.yaw_controller": "Yaw Controller",
+  "cast_shape.createbigcannons.autocannon_barrel": "Autocannon Barrel",
+  "cast_shape.createbigcannons.autocannon_barrel_flanged": "Autocannon Barrel Flanged",
+  "cast_shape.createbigcannons.autocannon_breech": "Autocannon Breech",
+  "cast_shape.createbigcannons.autocannon_recoil_spring": "Autocannon Recoil Spring",
+  "cast_shape.createbigcannons.cannon_end": "Cannon End",
+  "cast_shape.createbigcannons.large": "Large",
+  "cast_shape.createbigcannons.medium": "Medium",
+  "cast_shape.createbigcannons.screw_breech": "Screw Breech",
+  "cast_shape.createbigcannons.sliding_breech": "Sliding Breech",
+  "cast_shape.createbigcannons.small": "Small",
+  "cast_shape.createbigcannons.very_large": "Very Large",
+  "cast_shape.createbigcannons.very_small": "Very Small",
   "createbigcannons.gui.autocannon_ammo_container.tracer_spacing": "Tracer Spacing: Every %s round(s)",
   "createbigcannons.gui.set_proximity_fuze.distance": "Detonation Distance: %s blocks",
   "createbigcannons.gui.set_timed_fuze.time": "Fuze Time: %ss %s ticks",
@@ -385,6 +397,7 @@
   "exception.createbigcannons.cannon_mount.hasIncompleteCannonBlocks": "Cannon block at [%s, %s, %s] has not finished the crafting process",
   "exception.createbigcannons.cannon_mount.invalidCannon": "A cannon must have one and only one opening and one and only one closed end",
   "exception.createbigcannons.cannon_mount.noAutocannonBreech": "This cannon requires an autocannon breech to fire",
+  "exception.createbigcannons.casting": "Cannon cast at [%s, %s, %s] does not have a valid recipe for fluid %s and shape %s",
   "fluid.createbigcannons.molten_bronze": "Molten Bronze",
   "fluid.createbigcannons.molten_cast_iron": "Molten Cast Iron",
   "fluid.createbigcannons.molten_nethersteel": "Molten Nethersteel",
